upgrade: update to Spring Boot 4.0, Hibernate 7.2, Amazon Corretto 25, and revise dependencies and tracing and observability refactory.